arreglado icono buscador encontrado

--- a/index.html
+++ b/index.html
@@ -285,7 +285,9 @@
             //initial: false,
             zoom: 16,        // set zoom to found location when searched
             textErr: 'Elemento no encontrado',
-            marker: {circle: {
+            marker: {
+              icon: false,
+              circle: {
                 radius: 20,
                 color: '#0a0',
                 opacity: 1
