--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                         <li><a href="#" class="cultura4"><img src="./iconos/4-c.png" style="width:20px;height:20px;">&nbsp;Instituciones Religiosas</a></li>
                         <li><a href="#" class="cultura5"><img src="./iconos/5-c.png" style="width:20px;height:20px;">&nbsp;ONGs</a></li>
                         <li><a href="#" class="cultura6"><img src="./iconos/6-c.png" style="width:20px;height:20px;">&nbsp;Medios de Comunicacion</a></li>
+                        <li><a href="#" class="cultura7"><img src="./iconos/7-c.png" style="width:20px;height:20px;">&nbsp;Otros</a></li>
                     </ul>
                 </li>
                 <li><a href="#mm-m0-p4" class="mm-subopen fix"><img src="./iconos/0-k.png" style="width:20px;height:20px;">&nbsp;PROYECTOS</a>
